--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h1 class="display-3 fw-bold mb-4 animate-fade-in">
                         Haz que tus biorresiduos trabajen por ti
                          <img src="/img/bio.JPG"
-     alt="Atardecer en la playa con palmeras" 
+     alt="" 
      width="600" 
      height="400">
                     </h1>
