--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     
                     <h1 class="display-3 fw-bold mb-4 animate-fade-in">
                         Haz que tus biorresiduos trabajen por ti
-                         <img src="/img/bio.JPG"
+                         <img src="img/bio.JPG"
      alt="" 
      width="600" 
      height="400">
