Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     
                     <!-- Imagen hero responsive -->
                     <div class="img-container">
-                        <img src="/img/bio.JPG" 
+                        <img src="/imagen/img/bio.JPG" 
                              alt="Gestión de biorresiduos" 
                              class="hero-image"
                              loading="lazy">
@@ -194,7 +194,7 @@
         
         <!-- Logo responsive -->
         <div class="img-container">
-            <img src="/img/logo2.jpg" 
+            <img src="/imagen/logo2.jpg" 
                  alt="Biowaste Fiber Logo" 
                  class="logo-image"
                  loading="lazy">
@@ -324,7 +324,7 @@
     <section id="contacto" class="py-5 bg-white">
         <!-- Imagen de contacto responsive -->
         <div class="img-container">
-            <img src="/img/compostaj.JPG" 
+            <img src="/imagen/compostaj.JPG" 
                  alt="Proceso de compostaje" 
                  class="contact-image"
                  loading="lazy">
