Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
                 <i class="bi bi-flower2 text-success fs-3 me-2"></i>
                 <span class="fw-bold">BIOWASTE FIBER</span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            </div>
+
         </div>
     </nav>
 
@@ -43,7 +39,7 @@
                     
                     <!-- Imagen hero responsive -->
                     <div class="img-container">
-                        <img src="/imagen/img/bio.JPG" 
+                        <img src="/img/bio.JPG" 
                              alt="Gestión de biorresiduos" 
                              class="hero-image"
                              loading="lazy">
@@ -194,7 +190,7 @@
         
         <!-- Logo responsive -->
         <div class="img-container">
-            <img src="/imagen/logo2.jpg" 
+            <img src="/img/logo2.jpg" 
                  alt="Biowaste Fiber Logo" 
                  class="logo-image"
                  loading="lazy">
@@ -324,7 +320,7 @@
     <section id="contacto" class="py-5 bg-white">
         <!-- Imagen de contacto responsive -->
         <div class="img-container">
-            <img src="/imagen/compostaj.JPG" 
+            <img src="/img/compostaj.JPG" 
                  alt="Proceso de compostaje" 
                  class="contact-image"
                  loading="lazy">
