--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="row align-items-center min-vh-100">
                 <div class="col-lg-12 text-center text-white">
                     <h1 class="display-3 fw-bold mb-4 animate-fade-in">
-                        Haz que tus biorresiduos trabajen por ti
+                        Has que tus biorresiduos trabajen por ti
                     </h1>
                     
                     <!-- Imagen hero responsive -->
